--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="test">TEST</string>
     <string name="dark_theme">Темная тема</string>
+    <string name="search">Поиск…</string>
 </resources>
