--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="dark_theme">Темная тема</string>
     <string name="search">Поиск…</string>
     <string name="settings">Настройки</string>
-    <string name="is_empty_favorites">Пока здесь пусто…</string>
+    <string name="is_empty_favorites">Здесь пока пусто…</string>
+    <string name="your_progress">Ваш общий прогресс</string>
 </resources>
