--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="clear_all">Обнулить данные</string>
     <string name="restart_info">Требуеться перезапуск программы</string>
     <string name="motivation_txt">#Развивайся</string>
+    <string name="ach_finished">Всего достижении были выполнены:</string>
 
 </resources>
