--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">Саморазвитие</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -10,12 +11,13 @@
     <string name="your_progress">Ваш общий прогресс</string>
     <string name="implement_data">Внедрить данные</string>
     <string name="bold_font">Жирный шрифт</string>
-    <string name="no_support">Пока недоступно на вашем устройстве.</string>
+    <string name="not_finished_all">Чтобы активировать эту функцию, вы должны завершить все разделы</string>
     <string name="clear_all">Обнулить данные</string>
     <string name="restart_info">Требуеться перезапуск программы</string>
     <string name="motivation_txt">#Развивайся</string>
     <string name="ach_finished">Всего достижении были выполнены:</string>
     <string name="start">НАЧАТЬ</string>
     <string name="what_is_it">Внедрение данных из облака - при этом новые данные будут импортированы и внедрены в приложение. Это предзначен для пользовтелей которые хотят узнать большего</string>
+    <string name="send">Отправить</string>
 
 </resources>
