--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="what_is_it">Внедрение данных из облака - при этом новые данные будут импортированы и внедрены в приложение. Это предзначен для пользовтелей которые хотят узнать большего</string>
     <string name="send">Отправить</string>
 
+    <string name="success_send_check">"Успешно отправлено на проверку"</string>
 </resources>
