--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="send">Отправить</string>
 
     <string name="success_send_check">"Успешно отправлено на проверку"</string>
+    <string name="when_my_publish">Ваша публикация успешно отправлено на проверку, если ваша публикация успешно пройдет проверку, мы разрешим его для внедрение для других пользователей. Пожалуйста старайтесь писать коротко и ясно.</string>
 </resources>
