--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="rate_us">Оценить приложение</string>
     <string name="dev_mode_enabled">Включен режим разработчика</string>
     <string name="no_connection">Нет подключения к интернету</string>
+    <string name="connect_headphones">Подключите наушники для максимального погружения</string>
 </resources>
