--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="no_connection">Нет подключения к интернету</string>
     <string name="connect_headphones">Подключите наушники для максимального погружения</string>
     <string name="have_good_day">Медитация окончено, желаю вас приятного дня.</string>
+    <string name="exchange_coin">Обменить монеты</string>
+    <string name="share">Поделиться</string>
+    <string name="exchange">Обменить</string>
 </resources>
