--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="copy">Идентификатор скопировано в буфер обмена</string>
     <string name="headphones_connected">Наушники подключены, теперь давайте начнем медитировать...</string>
     <string name="headphones_disconnected">Наушники отключены...</string>
+    <string name="get_coin">Получайте Tcoin</string>
 </resources>
