--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="password">Пароль</string>
     <string name="register">Регистрация</string>
     <string name="receiver">Получатель..</string>
+    <string name="fund">Фонд</string>
 </resources>
